fix swagger document
